--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
 
 "pages":[
+  "pages/search/search",
   "pages/home/home",
   "pages/weather/weather",
   "pages/map/map",
-  "pages/search/search",
-  "pages/person/person"
+  "pages/person/person",
+  "pages/player/player"
 ],
 
   "permission": {
@@ -24,11 +25,18 @@
 },
 
 "tabBar": {
-  "list": [{
-    "pagePath": "pages/home/home",
-    "text": "首页",
-    "iconPath": "images/home.png",
-    "selectedIconPath": "images/home_selected.png"
+  "position":"top",
+  "list": [
+    {
+      "pagePath": "pages/home/home",
+      "text": "首页",
+      "iconPath": "images/home.png",
+      "selectedIconPath": "images/home_selected.png"
+    },
+    {"pagePath": "pages/search/search",
+    "text": "音乐",
+    "iconPath": "images/audio.png",
+    "selectedIconPath": "images/audio_selected.png"
    },{
     "pagePath": "pages/weather/weather",
     "text": "天气",
@@ -39,11 +47,6 @@
     "text": "地图",
     "iconPath": "images/map.png",
     "selectedIconPath": "images/map_selected.png" 
-   },{
-    "pagePath": "pages/search/search",
-    "text": "音乐",
-    "iconPath": "images/audio.png",
-    "selectedIconPath": "images/audio_selected.png"
    },{
     "pagePath": "pages/person/person",
     "text": "我的",
